// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pr-comment generator should generate files: dist/README.md 1`] = `
"# Sky UX Pull Request Preview

Preview build for [PR #123](https://github.com/blackbaud/skyux/pull/123)

[Storybook preview](https://blackbaud.github.io/skyux-pr-preview/123/storybook/)

Component Storybooks:

- [storybook-1](https://blackbaud.github.io/skyux-pr-preview/123/storybooks/storybook-1/)
- [storybook-2](https://blackbaud.github.io/skyux-pr-preview/123/storybooks/storybook-2/)
"
`;

exports[`pr-comment generator should generate files: dist/pr_comment.md 1`] = `
"[Storybook preview](https://blackbaud.github.io/skyux-pr-preview/123/storybook/)

Component Storybooks:

- [storybook-1](https://blackbaud.github.io/skyux-pr-preview/123/storybooks/storybook-1/)
- [storybook-2](https://blackbaud.github.io/skyux-pr-preview/123/storybooks/storybook-2/)
"
`;

exports[`pr-comment generator should throw errors 1`] = `"Invalid PR number"`;

exports[`pr-comment generator should throw errors 2`] = `"No storybooks specified"`;
